[package]
name = "dyrt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
itertools = "0.14.0"

# Data Parsing
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }

# UI And Plotting
plotters="0.3.7"
dark-light = "2.0.0"
