[package]
name = "dyrt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
enum-iterator = "2.3.0"
itertools = "0.14.0"

# Data Parsing
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }

# UI And Plotting
dark-light = "2.0.0"
image = "0.25.10"
plotters="0.3.7"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
